--- a/examples/map.html
+++ b/examples/map.html
@@ -7,6 +7,6 @@
   <title>GISFile JavaScript API</title>
 </head>
 <body>
-  <script src="http://gisfile.com/api/1.0/?map=kr&type=tile&width=100%&height=360" type="text/javascript" charset="utf-8"></script>
+  <script src="http://gisfile.com/api/1.0/?map=kr&type=tile&width=100%&height=800px" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
