--- a/examples/markers.html
+++ b/examples/markers.html
@@ -1,2 +1,12 @@
-
-<script src="http://gisfile.com/api/1.0/?layer=shelter&marker&width=100%&height=800px" type="text/javascript" charset="utf-8"></script>
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="keywords" content="gisfile, api, map, example">
+  <meta name="description" content="GISFile JavaScript API">
+  <title>GISFile JavaScript API</title>
+</head>
+<body>
+  <script src="http://gisfile.com/api/1.0/?layer=shelter&marker&width=100%&height=800px" type="text/javascript" charset="utf-8"></script>
+</body>
+</html>
